# cascade-router

./: .gitignore  README.md  docker-compose.yml  export_onnx.py  requirements.txt  test_proxy.py
cpp_core/: .dockerignore  CMakeLists.txt  Dockerfile  build_and_run.bat
cpp_core/src/: benchmark_onnx.cpp  proxy_server.cpp  tokenizer.hpp
docs/: evals.md  index.html  whitepaper.md
models/: README.md
src/: __init__.py  cascade_analytics.py  config.py  dashboard.html  download_vocab.py  export_weights.py  extract_features.py  generate_candidates.py  generate_charts.py  generate_ref.py  ingest.py  judge.py  llm_async.py  parquet_io.py  quantize_onnx.py  schemas.py  test_gemini.py  train_router.py
